# wayfire-plugins

./: LICENSE  README.md  meson.build
metadata/: ammen99-bench.xml  blur-to-background.xml  follow-cursor-bindings.xml  meson.build  primary-monitor-switch.xml  show-cursor.xml  switch-kb-layouts.xml  tablet-mode.xml
scripts/: meson.build  wdbg.py
src/: bench.cpp  blur-to-background.cpp  debugging.cpp  dynamic-workspace-switch.cpp  follow-cursor-bindings.cpp  ipc.cpp  ipc.hpp  meson.build  myipc.cpp  primary-monitor-switch.cpp  rounded-corners.cpp  show-cursor.cpp  switch-kb-layouts.cpp  tablet-mode.cpp  workaround-logitech.cpp
