install_data('primary-monitor-switch.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('follow-cursor-bindings.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('switch-kb-layouts.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('blur-to-background.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('show-cursor.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('ammen99-bench.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
install_data('tablet-mode.xml', install_dir: wayfire.get_variable(pkgconfig: 'metadatadir'))
