pms = shared_module('primary-monitor-switch', 'primary-monitor-switch.cpp',
    dependencies: [wayfire, wlroots],
    install: true, install_dir: wayfire.get_variable(pkgconfig: 'plugindir'))

rc = shared_module('rounded-corners', 'rounded-corners.cpp',
    dependencies: [wayfire, wlroots],
    install: true, install_dir: wayfire.get_variable(pkgconfig: 'plugindir'))

fcb = shared_module('follow-cursor-bindings', 'follow-cursor-bindings.cpp',
    dependencies: [wayfire, wlroots],
    install: true, install_dir: wayfire.get_variable(pkgconfig: 'plugindir'))
